Bug 62517 - realmd doesn't always cleanly update the access control config in sssd.conf
Summary: realmd doesn't always cleanly update the access control config in sssd.conf
Status: RESOLVED FIXED
Alias: None
Product: realmd
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-19 11:29 UTC by Kaushik
Modified: 2013-04-17 07:23 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Don't allow commas in logins used in sssd access lists (2.82 KB, patch)
2013-04-12 12:20 UTC, Stef Walter
Details | Splinter Review

Description Kaushik 2013-03-19 11:29:11 UTC
After working with the access controls, it seems realmd
doesn't cleanly update the configs in sssd.conf:

Executing "realm permit -R sssdad.com SSSDAD\\tuser2,SSSDAD\\tuser1" shows the following in sssd.conf:
simple_allow_users = tuser2, tuser2, sssdad\tuser1, tuser2, tuser1
Comment 1 Stef Walter 2013-04-12 12:20:39 UTC
Created attachment 77871 [details] [review]
Don't allow commas in logins used in sssd access lists
Comment 2 Stef Walter 2013-04-12 14:37:46 UTC
Yassir, this is another patch I would appreciate review of.
Comment 3 Stef Walter 2013-04-17 07:23:16 UTC
Attachment 77871 [details] pushed as 13274d5 - Don't allow commas in logins used in sssd access lists


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.