Don't allow commas in logins used in sssd access lists

https://bugs.freedesktop.org/show_bug.cgi?id=62517